--- a/css/style.css
+++ b/css/style.css
@@ -475,9 +475,8 @@ html {
      background: linear-gradient(to bottom, var(--arslanbehleem-bg1), var(--arslanbehleem-bg2) 60%, var(--arslanbehleem-bg1)) 
 }
  #arslanbehleem-portfolio.arslanbehleem-wrap {
-     width: 100vw;
-     margin-left: calc(50% - 50vw);
-     margin-right: calc(50% - 50vw) 
+     width: 100%;
+     margin: 0;
 }
  .arslanbehleem-container {
      max-width: 1160px;
